# rust-bindgen

./: Cargo.toml  README.md
bindgen/: Cargo.toml  callbacks.rs  clang.rs  lib.rs
bindgen-cli/: main.rs  options.rs
bindgen-tests/: Cargo.toml
bindgen-tests/tests/: tests.rs
bindgen-tests/tests/expectations/tests/: 381-decltype-alias.rs  allowlist_basic.rs  anon_enum_trait.rs  anon_union.rs  anon_union_1_0.rs  attribute_warn_unused_result.rs  attribute_warn_unused_result_no_attribute_detection.rs  attribute_warn_unused_result_pre_1_27.rs  bad-namespace-parenthood-inheritance.rs  bitfield-method-same-name.rs  builtin-template.rs  call-conv-typedef.rs  class_nested.rs  class_with_typedef.rs  comment-indent.rs  constant-non-specialized-tp.rs  constructor-tp.rs  constructors.rs  constructors_1_33.rs  derive-bitfield-method-same-name.rs  derive-debug-function-pointer.rs  dynamic_loading_with_blocklist.rs  dynamic_loading_with_class.rs  elaborated.rs  enum_and_vtable_mangling.rs  enum_in_template.rs  enum_in_template_with_typedef.rs  eval-value-dependent.rs  forward-inherit-struct-with-fields.rs  gen-constructors.rs  gen-destructors.rs  generate-inline.rs  in_class_typedef.rs  inherit-namespaced.rs  inline_namespace_no_ns_enabled.rs  issue-1113-template-references.rs  issue-1118-using-forward-decl.rs  issue-1197-pure-virtual-stuff.rs  issue-1350-attribute-overloadable.rs  issue-1514.rs  (+61 more)
bindgen-tests/tests/parse_callbacks/: mod.rs
bindgen-tests/tests/parse_callbacks/item_discovery_callback/: mod.rs
bindgen/codegen/: error.rs  helpers.rs  mod.rs
bindgen/ir/: comp.rs  (+6 more)
(+4 files in other folders)
