lints.workspace = true

[package]
name = "bindgen-tests"
version = "0.1.0"
publish = false
rust-version.workspace = true
edition.workspace = true

[dev-dependencies]
autocxx-bindgen = { workspace = true, default-features = true, features = ["__cli", "experimental"] }
owo-colors.workspace = true
prettyplease = { workspace = true, features = ["verbatim"] }
proc-macro2.workspace = true
regex.workspace = true
shlex.workspace = true
similar = { workspace = true, features = ["inline"] }
syn.workspace = true
tempfile.workspace = true

[features]
logging = ["autocxx-bindgen/logging"]
static = ["autocxx-bindgen/static"]
runtime = ["autocxx-bindgen/runtime"]

__testing_only_extra_assertions = ["autocxx-bindgen/__testing_only_extra_assertions"]
__testing_only_libclang_9 = ["autocxx-bindgen/__testing_only_libclang_9"]
__testing_only_libclang_16 = ["autocxx-bindgen/__testing_only_libclang_16"]
